infra/modules/eks/_main.tf
# locals {
#   app_name     = "OAuth Server"
#   app_prefix   = "oauth-server"
#   cluster_name = "oauth-server-cluster"
# }

# resource "aws_security_group" "eks_sg" {
#   name        = "oauth-server-eks-cluster-sg"
#   description = "Allow traffic"
#   vpc_id      = var.vpc_id

#   ingress {
#     description      = "World"
#     from_port        = 0
#     to_port          = 0
#     protocol         = "-1"
#     cidr_blocks      = ["0.0.0.0/0"]
#     ipv6_cidr_blocks = ["::/0"]
#   }

#   egress {
#     from_port        = 0
#     to_port          = 0
#     protocol         = "-1"
#     cidr_blocks      = ["0.0.0.0/0"]
#     ipv6_cidr_blocks = ["::/0"]
#   }

#   tags = merge({
#     Name = "${local.app_name} EKS Security Group",
#     "kubernetes.io/cluster/${local.cluster_name}" : "owned"
#   }, var.tags)
# }

# module "eks" {
#   source  = "terraform-aws-modules/eks/aws"
#   version = "20.26.0"

#   cluster_name                          = local.cluster_name
#   cluster_version                       = "1.31"
#   cluster_endpoint_private_access       = true
#   cluster_endpoint_public_access        = true
#   cluster_additional_security_group_ids = [aws_security_group.eks_sg.id]

#   vpc_id     = var.vpc_id
#   subnet_ids = var.private_subnet_ids

#   eks_managed_node_group_defaults = {
#     ami_type               = "AL2_x86_64"
#     disk_size              = 50
#     instance_types         = ["t3.medium", "t3.large"]
#     vpc_security_group_ids = [aws_security_group.eks_sg.id]
#   }

#   eks_managed_node_groups = {
#     green = {
#       min_size     = 1
#       max_size     = 10
#       desired_size = 3

#       instance_types = ["t3.medium"]
#       capacity_type  = "SPOT"
#       labels         = var.tags
#       taints = {
#       }
#       tags = var.tags
#     }
#   }

#   tags = var.tags
# }

# module "ouath_server_eks_lb_role" {
#   source                                 = "terraform-aws-modules/iam/aws//modules/iam-role-for-service-accounts-eks"
#   version                                = "5.47.0"
#   role_name                              = "oauth_server_eks_lb_role"
#   attach_load_balancer_controller_policy = true

#   oidc_providers = {
#     main = {
#       provider_arn               = module.eks.oidc_provider_arn
#       namespace_service_accounts = ["oauth:aws-load-balancer-controller"]
#     }
#   }
# }

# resource "aws_iam_policy" "oauth_server_dynamo_db_policy" {
#   name = "oauth-server-dynamo-db-policy"

#   policy = jsonencode({
#     Version = "2012-10-17"
#     Statement = [
#       {
#         Effect = "Allow"
#         Action = [
#           "dynamodb:*"
#         ]
#         Resource = var.dynamodb_table_arns
#       }
#     ]
#   })
# }

# resource "aws_iam_role_policy_attachment" "policy_attachment" {
#   role       = module.ouath_server_eks_lb_role.iam_role_name
#   policy_arn = aws_iam_policy.oauth_server_dynamo_db_policy.arn
# }

# provider "kubernetes" {
#   host                   = module.eks.cluster_endpoint
#   cluster_ca_certificate = base64decode(module.eks.cluster_certificate_authority_data)
#   exec {
#     api_version = "client.authentication.k8s.io/v1beta1"
#     args        = ["eks", "get-token", "--cluster-name", local.cluster_name]
#     command     = "aws"
#   }
# }

# provider "helm" {
#   kubernetes {
#     host                   = module.eks.cluster_endpoint
#     cluster_ca_certificate = base64decode(module.eks.cluster_certificate_authority_data)
#     exec {
#       api_version = "client.authentication.k8s.io/v1beta1"
#       args        = ["eks", "get-token", "--cluster-name", local.cluster_name]
#       command     = "aws"
#     }
#   }
# }

# resource "kubernetes_service_account" "service-account" {
#   metadata {
#     name      = "aws-load-balancer-controller"
#     namespace = "oauth"
#     labels = {
#       "app.kubernetes.io/name"      = "aws-load-balancer-controller"
#       "app.kubernetes.io/component" = "controller"
#     }
#     annotations = {
#       "eks.amazonaws.com/role-arn"               = module.ouath_server_eks_lb_role.iam_role_arn
#       "eks.amazonaws.com/sts-regional-endpoints" = "true"
#     }
#   }
# }

# resource "helm_release" "oauth_lb" {
#   name       = "aws-load-balancer-controller"
#   repository = "https://aws.github.io/eks-charts"
#   chart      = "aws-load-balancer-controller"
#   namespace  = "oauth"
#   depends_on = [
#     kubernetes_service_account.service-account
#   ]

#   set {
#     name  = "region"
#     value = "eu-west-2"
#   }

#   set {
#     name  = "vpcId"
#     value = var.vpc_id
#   }

#   set {
#     name  = "image.repository"
#     value = "602401143452.dkr.ecr.eu-west-2.amazonaws.com/amazon/aws-load-balancer-controller"
#   }

#   set {
#     name  = "serviceAccount.name"
#     value = "aws-load-balancer-controller"
#   }

#   set {
#     name  = "clusterName"
#     value = local.cluster_name
#   }

#   set {
#     name  = "serviceAccount.annotations.eks\\.amazonaws\\.com/role-arn"
#     value = module.ouath_server_eks_lb_role.iam_role_arn
#   }
# }
